RestTemplate поменял на JsonRpcHttpClient